src/objects/BGBK__Item__c.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <formula>IF(ISBLANK(Fee_Payment__c),
  IF(ISBLANK(BGBK__Fee__c),
    &quot;240&quot;,
    TEXT(BGBK__Fee__r.Agency_Number__c)
  ),
  TEXT(Fee_Payment__r.MUSW__Fee__r.Agency_Number__c))</formula>
        <label>Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Amount__c</fullName>
        <description>Transaction amount</description>
        <formula>BGBK__Price_Per_Unit__c * BGBK__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BGBK__Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated fee record.</description>
        <label>Fee</label>
        <referenceTo>MUSW__Fee__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated General Ledger account.</description>
        <label>Fund</label>
        <referenceTo>BGBK__Fund2__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated payment record.</description>
        <label>Payment</label>
        <referenceTo>BGBK__Payment__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Price_Per_Unit__c</fullName>
        <description>Transaction amount.</description>
        <label>Price Per Unit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Quantity__c</fullName>
        <description>Deprecated - the value is always 1.</description>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGBK__Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated receipt record.</description>
        <label>Receipt</label>
        <referenceTo>MUSW__Receipt__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Refund2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated refund record.</description>
        <label>Refund</label>
        <referenceTo>BGBK__Refund2__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Refund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated refund record.</description>
        <label>Refund</label>
        <referenceTo>BGBK__Refund__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Related_To__c</fullName>
        <description>Item ID:Item API Name (e.g. 00abc123blabla:MUSW__Fee__c)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Related To</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Revenue_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Revenue Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Transaction__c</fullName>
        <description>Lookup to the associated transaction record.</description>
        <label>Transaction</label>
        <referenceTo>BGBK__Transaction__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BGBK__Type__c</fullName>
        <description>Deprecated.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Fee</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Allocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_AFRS__c</fullName>
        <formula>DATEVALUE(
  IF(ISBLANK(Journal_Voucher_Detail__c),
    &quot;&quot;,
    TEXT(Journal_Voucher_Detail__r.JournalVoucher__r.Document_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Sent to AFRS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debit_Credit__c</fullName>
        <formula>IF( BGBK__Amount__c  &gt; 0, &quot;DR&quot;, IF (BGBK__Amount__c &lt; 0, &quot;CR&quot;, &quot;Amount is 0&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposit</label>
        <referenceTo>MUSW__Deposit__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee Payment</label>
        <referenceTo>MUSW__Fee_Payment__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fund_AccountSys__c</fullName>
        <formula>BGBK__Fund__r.Accounting_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fund AccountSys</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_GL__c</fullName>
        <formula>BGBK__Fund__r.GL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fund_GL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_To_AFRS__c</fullName>
        <formula>BGBK__Fund__r.GL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL (To AFRS)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intake_Method__c</fullName>
        <formula>IF(ISBLANK(Deposit__c),
  IF(ISBLANK(BGBK__Fee__c),
    IF( ISBLANK(Fee_Payment__c) , 
      IF( ISBLANK( BGBK__Receipt__c ) , 
        text(Payable_Receipt__r.MUSW__Receipt__r.Intake_Method__c) , 
        text(BGBK__Receipt__r.Intake_Method__c) ) , 
      text(Fee_Payment__r.MUSW__Receipt__r.Intake_Method__c) )
    ,&quot;N/A&quot;),
  &quot;Validation Room&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intake Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Voucher_Detail_Grouping__c</fullName>
        <formula>Transaction_Code__c &amp;
IF(Transaction_Code_Type__c = &quot;R&quot;,&quot;-R&quot;,&quot;&quot;) &amp; &quot;-&quot; &amp;
Agency__c &amp; &quot;-&quot; &amp;
BGBK__Fund__r.Fund__c &amp; &quot;-&quot; &amp;
Program_Index__c &amp;
IF( BGBK__Fund__r.Accounting_System__c = &quot;AFRS&quot;, 
    &quot;-&quot; &amp; 
        BGBK__Fund__r.Major_Group__c &amp; &quot;-&quot; &amp;
        BGBK__Fund__r.Major_Source__c &amp; &quot;-&quot; &amp;
        BGBK__Fund__r.Sub_Source__c,
    &quot;&quot;
) &amp; &quot;-&quot; &amp;
IF(BGBK__Amount__c &gt; 0, &quot;DR&quot;, &quot;CR&quot;) &amp; &quot;-&quot; &amp;
BGBK__Fund__r.GL__c</formula>
        <label>Journal Voucher Detail Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Voucher_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal Voucher Detail</label>
        <referenceTo>Journal_Voucher_Detail__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Journal_Voucher_Reference__c</fullName>
        <formula>Journal_Voucher_Detail__r.JournalVoucher__c</formula>
        <label>Journal Voucher Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Voucher_Type__c</fullName>
        <formula>RIGHT(TEXT(BGBK__Type__c),LEN(TEXT(BGBK__Type__c))-5)</formula>
        <label>Journal Voucher Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Voucher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal Voucher</label>
        <referenceTo>Journal_Voucher__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payable_Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Receipt</label>
        <referenceTo>MUSW__Payable_Receipt__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <formula>IF(ISBLANK(BGBK__Fee__c),IF( ISBLANK(Fee_Payment__c) , IF( ISBLANK( BGBK__Receipt__c ) , text(Payable_Receipt__r.MUSW__Receipt__r.MUSW__Payment_Method__c) , text(BGBK__Receipt__r.MUSW__Payment_Method__c) ) , text(Fee_Payment__r.MUSW__Receipt__r.MUSW__Payment_Method__c) ),&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profession_Code__c</fullName>
        <formula>Fee_Payment__r.MUSW__Fee__r.Profession_Code__c</formula>
        <label>Profession Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Index__c</fullName>
        <formula>IF(ISBLANK( BGBK__Fee__c ), IF(ISBLANK(  Fee_Payment__c  ),  IF( ISBLANK( Payable_Receipt__c ) , &quot;From Receipt - Receipt doesn&apos;t have PI&quot;,  Payable_Receipt__r.MUSW__Deposit__r.wadol_Professional_Code__c) ,  Fee_Payment__r.MUSW__Fee__r.Profession_Code__c ) ,  BGBK__Fee__r.Profession_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Refund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt Refund</label>
        <referenceTo>BGBK__Receipt_Refund__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <formula>IF(NOT(ISBLANK(Fee_Payment__c)),
  &quot;Fee Payment: &quot; &amp; Fee_Payment__r.Name,
  IF(NOT(ISBLANK(BGBK__Fee__c)), 
    &quot;Fee: &quot; &amp; BGBK__Fee__r.Name,
    IF(NOT(ISBLANK(Payable_Receipt__c)),
      &quot;Payable Receipt: &quot; &amp; Payable_Receipt__r.Name,
      IF(NOT(ISBLANK(Deposit__c)),
        &quot;Deposit: &quot; &amp; Deposit__r.Name,
        IF(NOT(ISBLANK(BGBK__Refund2__c)),
          &quot;Refund: &quot; &amp; BGBK__Refund2__r.Name,
          IF(NOT(ISBLANK(Receipt_Refund__c)),
            &quot;Receipt Refund: &quot;&amp; Receipt_Refund__r.Name,
            &quot;Receipt, Payment, or Blank&quot;
          )
        )
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Accounting_System__c</fullName>
        <formula>Case( 
    BGBK__Fund__r.Accounting_System__c, 
    &quot;AFRS&quot;,IF(
        IF(BGBK__Amount__c &lt;0,
            CASE(BGBK__Type__c , 
                &quot;001X&quot;,1,&quot;006X&quot;,1,&quot;008R&quot;,1,&quot;012X&quot;,1,&quot;049X&quot;,1,&quot;071X&quot;,1,
                &quot;074R&quot;,1,&quot;090X&quot;,1,&quot;132X&quot;,1,&quot;198R&quot;,1,&quot;214X&quot;,1,&quot;298X&quot;,1,
                &quot;449X&quot;,1,&quot;455X&quot;,1,&quot;803X&quot;,1,&quot;966X&quot;,1,
                0
            ), 
            CASE(BGBK__Type__c, 
                &quot;001R&quot;,1,&quot;006R&quot;,1,&quot;008X&quot;,1,&quot;012R&quot;,1,&quot;049R&quot;,1,&quot;071R&quot;,1,
                &quot;074X&quot;,1,&quot;199X&quot;,1,&quot;951X&quot;,1,&quot;955X&quot;,1, &quot;965X&quot;,1,
                0
            )
        )=1,
            &quot;AFRS&quot;,
            &quot;N/A&quot;
    ),
    IF(BGBK__Amount__c &lt; 0,
        IF(Transaction_Code_Type__c == &quot;R&quot;,
            &quot;TMS&quot;,
            &quot;N/A&quot; 
        ),
        IF(Transaction_Code_Type__c == &quot;X&quot;,
            &quot;TMS&quot;,
            &quot;N/A&quot;
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Accounting System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Code_Type__c</fullName>
        <formula>IF(RIGHT(text(BGBK__Type__c),1)=&quot;R&quot;,&quot;R&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Code Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Code__c</fullName>
        <formula>LEFT( Text(BGBK__Type__c)  , 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Effective_Date__c</fullName>
        <formula>BGBK__Transaction__r.BGBK__Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <formula>RIGHT(TEXT(BGBK__Type__c),LEN(TEXT(BGBK__Type__c))-5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_code_type_merge__c</fullName>
        <formula>Transaction_Code__c + Transaction_Code_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction code type merge</label>
        <type>Text</type>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BGBK__Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Fee_Payment__c</columns>
        <columns>Transaction_Code__c</columns>
        <columns>BGBK__Fund__c</columns>
        <columns>GL_To_AFRS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BGBK__Fund__c</field>
            <operation>contains</operation>
            <value>06L-02-77-000008</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>7/17/2019 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Details</fullName>
        <columns>Journal_Voucher__c</columns>
        <columns>Journal_Voucher_Detail__c</columns>
        <columns>Journal_Voucher_Detail_Grouping__c</columns>
        <columns>Journal_Voucher_Type__c</columns>
        <columns>NAME</columns>
        <columns>Fee_Payment__c</columns>
        <columns>BGBK__Amount__c</columns>
        <columns>Transaction_Code__c</columns>
        <columns>BGBK__Fund__c</columns>
        <columns>BGBK__Fee__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Payment_Method__c</columns>
        <columns>BGBK__Transaction__c</columns>
        <columns>Date_Sent_to_AFRS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>9/8/2019 12:00 AM</value>
        </filters>
        <label>All-Details</label>
    </listViews>
    <listViews>
        <fullName>Search</fullName>
        <columns>NAME</columns>
        <columns>BGBK__Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Fee_Payment__c</columns>
        <columns>Transaction_Code__c</columns>
        <columns>BGBK__Fund__c</columns>
        <columns>GL_To_AFRS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BGBK__Fund__c</field>
            <operation>contains</operation>
            <value>01P</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>7/22/2019 12:00 AM</value>
        </filters>
        <filters>
            <field>Transaction_Code__c</field>
            <operation>equals</operation>
            <value>965</value>
        </filters>
        <label>Search</label>
    </listViews>
    <nameField>
        <displayFormat>IT-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <recordTypes>
        <fullName>BGBK__AdminOnly</fullName>
        <active>true</active>
        <label>AdminOnly</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BGBK__Item_Trans_change_not_allowed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( BGBK__Transaction__c )</errorConditionFormula>
        <errorMessage>Transaction is not editable</errorMessage>
    </validationRules>
</CustomObject>